Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1259413: "Check for event conflicts" not working in latest CVS
 - Fixed bug 1262236: Conflict checking broken in new TZ code
 - Fixed bug 1261920: "Email all participants" link did not include
   external users
 - Fixed bug 1261571: Overriding a conflict when name has double quotes
 - Fixed bug 1214768: assistants can't see calendar if allow_view_other is N
 - Fixed bug 1205806: send_reminders.php did not check some settings properly
 - Fixed bug 1257544: Changing event end date
 = Fixed bug 1256250: reject_entry.php error
 - Fixed bug 1254880: the fill in of languages in system settings wrong
 - Fixed bug 1214060: activity log not working properly with user access control
 - Fixed bug 1246969: Clicking on "Add New Entry" was defaulting to
   current date rather than what was passed in via URL
 - Fixed bugs 1214060, 1214046: activity log not working properly with
   user access control
 - Added patch 1237485: FCKEditor for editing HTML event descriptions
 - Fixed bug: view_entry.php was displaying '&amp' instead of '&amp;'
 - Fixed bug 1254983: nulogin.php throws language errors
 - Added install/index and classes/*.class files to update_translation.pl files list
 - Moved translation related functions to translate.php
 - Added 'Timezone Notice' if Assistant and Boss are in defferent timezones
 - Fixed bug 1249012: can't change timed to untimed events
 - Fixed bug 1233798: Catagory settings don't work quite right for Boss/Assistant
 - Fixed security: exploit allows execution of code downloaded from
   remote server
 - Fixed bug 1250870: repeatly entries for NUCs cannot be deleted correctly
 - Rename Event and RptEvent methods to conform to naming guidelines
 - Updated installer & added installer images
 - Updated views to tabbed GUI
 - Adjust sending time in send_reminder.php to Server Time vs GMT
 - Fixed bug 1204920: Default language is not set correctly to new users
 - Added end time calculation functions to Event.class